# Pr-diction-Valeur-R-siduelle-

./: .gitignore  main.py  notebook.ipynb  predictions.csv  presentation.html  pyproject.toml
.claude/: settings.local.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
src/: utils_fonction.py
